--- a/RecipeAPI.yaml
+++ b/RecipeAPI.yaml
@@ -5,7 +5,10 @@ info:
   description: A web application to manage favorite recipes.
 
 servers:
-  - url: http://localhost:8080
+  - url: http://localhost:8080/
+  
+x-project-information:
+  gitRepo: https://github.com/dhruvkothari26/RecipeAPIAssignment.git
 
 components:
   securitySchemes:
